--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 /.pnp
 .pnp.js
 
+
+/src/index.js
+
 # testing
 /coverage
 
@@ -22,4 +25,3 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-/src
